@@ -168,7 +168,7 @@ int32_t SPVM__Sys__Process__system(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t wstatus = system(command);
   
-  if (status == -1) {
+  if (wstatus == -1) {
     env->die(env, stack, "[System Error]system failed:%s", env->strerror(env, stack, errno, 0), __func__, FILE_NAME, __LINE__);
     return SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_SYSTEM_CLASS;
   }
